--- a/gatsby-template/src/components/embed.css
+++ b/gatsby-template/src/components/embed.css
@@ -1,13 +1,13 @@
-.embed {
+.embed-container-sizing {
   position: relative;
 }
 
-.embed img {
+.embed-container-sizing img {
   display: block;
   height: auto;
   width: 100%;
 }
-.embed iframe {
+.embed-container-sizing iframe {
   height: 100%;
   left: 0;
   position: absolute;
